# Mesh-2-Traversability-pcd

./: CMakeLists.txt  CMakeLists.txt~  README.md  package.xml  package.xml~
include/mesh_to_traversability_pcd/: mesh_to_traversability_pcd.hpp
launch/: mesh_to_traversability_pcd.launch  mesh_to_traversability_pcd.launch~  pcd_to_traversability_pcd.launch  pcd_to_traversability_pcd.launch~  ply_to_traversability_pcd.launch
rviz/: load_pcd.rviz
src/: mesh_to_traversability_pcd_node.cpp
